--- a/Send_test/module/Makefile
+++ b/Send_test/module/Makefile
@@ -7,5 +7,7 @@ clean:
 	$(MAKE) -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
 	
 load:
-
+	sudo insmod hello_kernel_mod.ko
+	
 unload:
+	sudo rmmod hello_kernel_mod.ko
